--- a/stock_print_picking_status/views/stock_picking_view.xml
+++ b/stock_print_picking_status/views/stock_picking_view.xml
@@ -8,8 +8,8 @@
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
-            <field name="printed" position="attributes">
-                <attribute name="invisible">False</attribute>
+            <field name="backorder_id" position="after">
+                <field name="printed" />
             </field>
         </field>
     </record>
